docs(home): Correct the message of the buttons in the installation section

--- a/index.html
+++ b/index.html
@@ -475,7 +475,9 @@ layout: home
           </div>
 
           <div class="btn-group">
-            <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=org.flyve.inventory.agent">Download</a>
+            <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=org.flyve.inventory.agent">
+              Download
+            </a>
           </div>
         </div>
       </div>
@@ -498,7 +500,9 @@ layout: home
           </div>
 
           <div class="btn-group">
-            <a class="btn btn-primary" href="https://github.com/flyve-mdm/flyve-mdm-android-inventory-agent/releases/latest">Get code</a>
+            <a class="btn btn-primary" href="https://github.com/flyve-mdm/flyve-mdm-android-inventory-agent/releases/latest">
+              Download
+            </a>
           </div>
         </div>
       </div>
@@ -522,7 +526,9 @@ layout: home
           </div>
 
           <div class="btn-group">
-            <a class="btn btn-primary" href="https://f-droid.org/app/org.flyve.inventory.agent">Download</a>
+            <a class="btn btn-primary" href="https://f-droid.org/app/org.flyve.inventory.agent">
+              Get code
+            </a>
           </div>
         </div>
       </div>
