docs(changelog): hide in page 404

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ layout: home
 
           <div class="btn-group">
             <a class="btn btn-primary" href="https://f-droid.org/app/org.flyve.inventory.agent">
-              Get code
+              Get Code
             </a>
           </div>
         </div>
