docs(home): change message of Installation

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ layout: home
       <div class="row">
         <div class="col-md-24 text-center">
           <h3>Installation</h3>
-          <p>Download the latest IPA, from...</p>
+          <p>Download the latest APK, from...</p>
         </div>
       </div>
     </div>
