docs(home): change dialog of download platform

--- a/index.html
+++ b/index.html
@@ -471,12 +471,12 @@ layout: home
           </h3>
 
           <div class="type-sh3">
-            You can download our app in the Play Store and start using our project now
+            It is a digital distribution service operated and developed by Google. It serves as the official app store for the Android operating system, allowing users to browse and download applications developed with the Android software development kit (SDK) and published through Google.
           </div>
 
           <div class="btn-group">
             <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=org.flyve.inventory.agent">
-              Download
+              Download 
             </a>
           </div>
         </div>
@@ -496,12 +496,12 @@ layout: home
             F-Droid 
           </h3>
           <div class="type-sh3">
-            You can download our app in the F-Droid and start using our project now
+            It is a software repository for Android applications. The main repository, hosted by the project, contains only apps that are free and open-source software.
           </div>
 
           <div class="btn-group">
             <a class="btn btn-primary" href="https://github.com/flyve-mdm/flyve-mdm-android-inventory-agent/releases/latest">
-              Download
+              Download 
             </a>
           </div>
         </div>
@@ -522,12 +522,12 @@ layout: home
           </h3>
 
           <div class="type-sh3">
-            You can view and download the code of this project through the Github platform
+            It is a web-based Git or version control repository and Internet hosting service. It is mostly used for code. It offers all of the distributed version control and source code management (SCM) functionality of Git as well as adding its own features.
           </div>
 
           <div class="btn-group">
-            <a class="btn btn-primary" href="https://f-droid.org/app/org.flyve.inventory.agent">
-              Get Code
+            <a class="btn btn-primary" href="https://github.com/flyve-mdm/flyve-mdm-android-inventory-agent/releases/latest">
+              Download 
             </a>
           </div>
         </div>
