docs(screenshots): add missing information

--- a/screenshots.html
+++ b/screenshots.html
@@ -182,24 +182,42 @@ layout: page
                                      In this screen you can configure the following parameters:
                                 </p>
                                 <ul>
+
                                     <li>
                                         <b>Boot options:</b><br/>
                                         <span>
                                             Allows you to disable automatic boot
                                         </span>
                                     </li>
+
                                     <li>
                                         <b>Notifications:</b><br/>
                                         <span>
                                             Allows you to define the address of access server
                                         </span> 
                                     </li>
+
+                                    <li>
+                                        <b>Server address:</b><br/>
+                                        <span>
+                                            Allows you to change the access address to the server
+                                        </span> 
+                                    </li>
+
+                                    <li>
+                                        <b>Tag:</b><br/>
+                                        <span>
+                                            Allows you to define a tag
+                                        </span> 
+                                    </li>
+
                                     <li>
                                         <b>HTTP authentication credentials:</b><br/>
                                         <span>
                                             In this section you need to enter your user and password of Flyve MDM
                                         </span> 
                                     </li>
+
                                 </ul>
 
                                  <button type="button" class="btn btn-primary btn-block"
