--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@ layout: home
 
           <figure class="media row">
             <div class="media-img ratio-movie">
-                <img src="images/blackBerry.jpg" alt="" />
+                <img src="images/blackBerry.jpg" alt="blackBerry" />
             </div>
-            <a class="btn btn-default center-block" href="{{ "assets/blackBerry.xml" | relative_url }}" role="button" Download>Download</a>
+            <a class="btn btn-default center-block" href="{{ "assets/blackBerry.xml" | absolute_url }}" role="button" Download>Download</a>
             <figcaption class="media-caption">
               <h4 class="media-header">
                 BlackBerry Priv STV100-3
@@ -410,9 +410,9 @@ layout: home
 
           <figure class="media row">
             <div class="media-img ratio-movie">
-                <img src="images/xperia.jpg" alt="" />
+                <img src="images/xperia.jpg" alt="xperia" />
             </div>
-            <a class="btn btn-default center-block" href="{{ "assets/xperia.xml" | relative_url }}" role="button" Download>Download</a>
+            <a class="btn btn-default center-block" href="{{ "assets/xperia.xml" | absolute_url }}" role="button" Download>Download</a>
             <figcaption class="media-caption">
               <h4 class="media-header">
                 Sony Xperia Z2
@@ -430,9 +430,9 @@ layout: home
 
           <figure class="media row">
             <div class="media-img ratio-movie" >
-                <img src="images/lenovo.jpg" alt="" />
+                <img src="images/lenovo.jpg" alt="lenovo" />
             </div>
-            <a class="btn btn-default center-block" href="{{ "assets/lenovo.xml" | relative_url }}" role="button" Download>Download</a>
+            <a class="btn btn-default center-block" href="{{ "assets/lenovo.xml" | absolute_url }}" role="button" Download>Download</a>
             <figcaption class="media-caption">
               <h4 class="media-header">
                 Lenovo A2010
@@ -463,7 +463,7 @@ layout: home
       <div class="row">
         <div class="col-md-12 col-md-push-12 text-center">
           <img class="img-responsive visible-xs-inline-block visible-sm-inline-block visible-md-inline-block visible-lg-inline-block visible-xl-inline-block"
-            alt="" src="images/playStore.png" data-source-index="2">
+            alt="playStore" src="images/playStore.png" data-source-index="2">
         </div>
         <div class="col-md-12 col-md-pull-12">
           <h3>
@@ -489,7 +489,7 @@ layout: home
       <div class="row">
         <div class="col-md-12 col-md-push-12 text-center">
           <img class="img-responsive visible-xs-inline-block visible-sm-inline-block visible-md-inline-block visible-lg-inline-block visible-xl-inline-block"
-            alt="" src="images/f-droid.png" data-source-index="2">
+            alt="f-droid" src="images/f-droid.png" data-source-index="2">
         </div>
         <div class="col-md-12 col-md-pull-12">
           <h3>
@@ -514,7 +514,7 @@ layout: home
       <div class="row">
         <div class="col-md-12 col-md-push-12 text-center">
           <img class="img-responsive visible-xs-inline-block visible-sm-inline-block visible-md-inline-block visible-lg-inline-block visible-xl-inline-block"
-            alt="" src="images/GitHub.png" data-source-index="2">
+            alt="GitHub" src="images/GitHub.png" data-source-index="2">
         </div>
         <div class="col-md-12 col-md-pull-12">
           <h3>
