--- a/screenshots.html
+++ b/screenshots.html
@@ -14,7 +14,7 @@ layout: page
             <figure class="media">
                 <div class="media-img ratio-movie">
                     <a type="button" data-toggle="modal" data-target="#screen1" href="#" >
-                        <img src="{{ "images/screenshots/home.jpg" | relative_url }}" alt="">
+                        <img src="{{ "images/screenshots/home.jpg" | absolute_url }}" alt="home">
                     </a>
                 </div>
 
@@ -42,7 +42,7 @@ layout: page
                         </div>
                         <div class="modal-body">
                              <div class="col-sm-12">
-                                <img src="{{ "images/screenshots/home.jpg" | relative_url }}" alt="">
+                                <img src="{{ "images/screenshots/home.jpg" | absolute_url }}" alt="home">
                              </div>
                              <div class="col-sm-12">
                                  <h2>Home loading</h2>
@@ -66,7 +66,7 @@ layout: page
             <figure class="media">
                 <div class="media-img ratio-movie">
                     <a type="button" data-toggle="modal" data-target="#screen2" href="#" >
-                        <img src="{{ "images/screenshots/settings.jpg" | relative_url }}" alt="">
+                        <img src="{{ "images/screenshots/settings.jpg" | absolute_url }}" alt="settings">
                     </a>
                 </div>
 
@@ -94,7 +94,7 @@ layout: page
                         </div>
                         <div class="modal-body">
                              <div class="col-sm-12">
-                                <img src="{{ "images/screenshots/settings.jpg" | relative_url }}" alt="">
+                                <img src="{{ "images/screenshots/settings.jpg" | absolute_url }}" alt="settings">
                              </div>
                              <div class="col-sm-12">
                                  <h2>Settings</h2>
@@ -146,7 +146,7 @@ layout: page
             <figure class="media">
                 <div class="media-img ratio-movie">
                     <a type="button" data-toggle="modal" data-target="#screen3" href="#" >
-                        <img src="{{ "images/screenshots/globalSettings.jpg" | relative_url }}" alt="">
+                        <img src="{{ "images/screenshots/globalSettings.jpg" | absolute_url }}" alt="globalSettings">
                     </a>
                 </div>
 
@@ -174,7 +174,7 @@ layout: page
                         </div>
                         <div class="modal-body">
                              <div class="col-sm-12">
-                                <img src="{{ "images/screenshots/globalSettings.jpg" | relative_url }}" alt="">
+                                <img src="{{ "images/screenshots/globalSettings.jpg" | absolute_url }}" alt="globalSettings">
                              </div>
                              <div class="col-sm-12">
                                  <h2>Global Settings</h2>
