--- a/reports/debug/org.flyve.inventory.agent/TimeAlarm.java.html
+++ b/reports/debug/org.flyve.inventory.agent/TimeAlarm.java.html
@@ -44,7 +44,7 @@ import org.flyve.inventory.agent.utils.HttpInventory;
 
 import java.util.Calendar;
 
-<span class="nc" id="L44">public class TimeAlarm extends BroadcastReceiver {</span>
+<span class="fc" id="L44">public class TimeAlarm extends BroadcastReceiver {</span>
 
     /**
      * If the success XML is created, it sends the inventory
@@ -83,25 +83,25 @@ import java.util.Calendar;
      * @param Context the context
      */
     public void setAlarm(Context context) {
-<span class="nc" id="L83">        AlarmManager am =( AlarmManager)context.getSystemService(Context.ALARM_SERVICE);</span>
-<span class="nc" id="L84">        Intent i = new Intent(context, TimeAlarm.class);</span>
-<span class="nc" id="L85">        PendingIntent pi = PendingIntent.getBroadcast(context, 0, i, 0);</span>
+<span class="fc" id="L83">        AlarmManager am =( AlarmManager)context.getSystemService(Context.ALARM_SERVICE);</span>
+<span class="fc" id="L84">        Intent i = new Intent(context, TimeAlarm.class);</span>
+<span class="fc" id="L85">        PendingIntent pi = PendingIntent.getBroadcast(context, 0, i, 0);</span>
 
-<span class="nc" id="L87">        SharedPreferences customSharedPreference = PreferenceManager.getDefaultSharedPreferences(context);</span>
-<span class="nc" id="L88">        String timeInventory = customSharedPreference.getString(&quot;timeInventory&quot;, &quot;Week&quot;);</span>
+<span class="fc" id="L87">        SharedPreferences customSharedPreference = PreferenceManager.getDefaultSharedPreferences(context);</span>
+<span class="fc" id="L88">        String timeInventory = customSharedPreference.getString(&quot;timeInventory&quot;, &quot;Week&quot;);</span>
 
-<span class="nc" id="L90">        Calendar cal = Calendar.getInstance();</span>
-<span class="nc bnc" id="L91" title="All 2 branches missed.">        if (timeInventory.equals(&quot;Day&quot;)) {</span>
+<span class="fc" id="L90">        Calendar cal = Calendar.getInstance();</span>
+<span class="pc bpc" id="L91" title="1 of 2 branches missed.">        if (timeInventory.equals(&quot;Day&quot;)) {</span>
 <span class="nc" id="L92">            cal.set(Calendar.HOUR_OF_DAY, 18);</span>
 <span class="nc" id="L93">            cal.set(Calendar.MINUTE, 0);</span>
 <span class="nc" id="L94">            cal.set(Calendar.SECOND, 0);</span>
 <span class="nc" id="L95">            cal.set(Calendar.MILLISECOND, 0);</span>
-<span class="nc bnc" id="L96" title="All 2 branches missed.">        } else if(timeInventory.equals(&quot;Week&quot;)) {</span>
-<span class="nc" id="L97">            cal.set(Calendar.DAY_OF_WEEK, 1);</span>
-<span class="nc" id="L98">            cal.set(Calendar.HOUR_OF_DAY, 18);</span>
-<span class="nc" id="L99">            cal.set(Calendar.MINUTE, 33);</span>
-<span class="nc" id="L100">            cal.set(Calendar.SECOND, 0);</span>
-<span class="nc" id="L101">            cal.set(Calendar.MILLISECOND, 0);</span>
+<span class="pc bpc" id="L96" title="1 of 2 branches missed.">        } else if(timeInventory.equals(&quot;Week&quot;)) {</span>
+<span class="fc" id="L97">            cal.set(Calendar.DAY_OF_WEEK, 1);</span>
+<span class="fc" id="L98">            cal.set(Calendar.HOUR_OF_DAY, 18);</span>
+<span class="fc" id="L99">            cal.set(Calendar.MINUTE, 33);</span>
+<span class="fc" id="L100">            cal.set(Calendar.SECOND, 0);</span>
+<span class="fc" id="L101">            cal.set(Calendar.MILLISECOND, 0);</span>
 <span class="nc bnc" id="L102" title="All 2 branches missed.">        } else if(timeInventory.equals(&quot;Month&quot;)) {</span>
 <span class="nc" id="L103">            cal.set(Calendar.WEEK_OF_MONTH, 1);</span>
 <span class="nc" id="L104">            cal.set(Calendar.DAY_OF_WEEK, 1);</span>
@@ -111,8 +111,8 @@ import java.util.Calendar;
 <span class="nc" id="L108">            cal.set(Calendar.MILLISECOND, 0);</span>
         }
 
-<span class="nc" id="L111">        am.set(AlarmManager.RTC_WAKEUP, cal.getTimeInMillis(), pi);</span>
-<span class="nc" id="L112">    }</span>
+<span class="fc" id="L111">        am.set(AlarmManager.RTC_WAKEUP, cal.getTimeInMillis(), pi);</span>
+<span class="fc" id="L112">    }</span>
 
     /**
      * Removes the alarm with a matching argument
