--- a/reports/debug/org.flyve.inventory.agent/SplashActivity.java.html
+++ b/reports/debug/org.flyve.inventory.agent/SplashActivity.java.html
@@ -67,7 +67,7 @@ import android.view.WindowManager;
      * Starts the activity
      */
     private void openActivity() {
-<span class="nc" id="L67">        Intent miIntent = new Intent(SplashActivity.this, Accueil.class);</span>
+<span class="nc" id="L67">        Intent miIntent = new Intent(SplashActivity.this, MainActivity.class);</span>
 <span class="nc" id="L68">        SplashActivity.this.startActivity(miIntent);</span>
 <span class="nc" id="L69">        SplashActivity.this.finish();</span>
 <span class="nc" id="L70">    }</span>
