--- a/reports/androidTests/connected/org.flyve.inventory.agent.AboutTest.html
+++ b/reports/androidTests/connected/org.flyve.inventory.agent.AboutTest.html
@@ -5,16 +5,17 @@ layout: coverage
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>Test results - Package org.flyve.inventory.agent</title>
+<title>Test results - Class org.flyve.inventory.agent.AboutTest</title>
 <link href="css/base-style.css" rel="stylesheet" type="text/css"/>
 <link href="css/style.css" rel="stylesheet" type="text/css"/>
 <script src="js/report.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="content">
-<h1>Package org.flyve.inventory.agent</h1>
+<h1>Class org.flyve.inventory.agent.AboutTest</h1>
 <div class="breadcrumbs">
-<a href="index.html">all</a> &gt; org.flyve.inventory.agent</div>
+<a href="index.html">all</a> &gt; 
+<a href="org.flyve.inventory.agent.html">org.flyve.inventory.agent</a> &gt; AboutTest</div>
 <div id="summary">
 <table>
 <tr>
@@ -24,7 +25,7 @@ layout: coverage
 <tr>
 <td>
 <div class="infoBox" id="tests">
-<div class="counter">5</div>
+<div class="counter">1</div>
 <p>tests</p>
 </div>
 </td>
@@ -36,7 +37,7 @@ layout: coverage
 </td>
 <td>
 <div class="infoBox" id="duration">
-<div class="counter">4.581s</div>
+<div class="counter">1.762s</div>
 <p>duration</p>
 </div>
 </td>
@@ -56,47 +57,21 @@ layout: coverage
 <div id="tabs">
 <ul class="tabLinks">
 <li>
-<a href="#tab0">Classes</a>
+<a href="#tab0">Tests</a>
 </li>
 </ul>
 <div id="tab0" class="tab">
-<h2>Classes</h2>
+<h2>Tests</h2>
 <table>
-<thread>
+<thead>
 <tr>
-<th>Class</th>
-<th>Tests</th>
-<th>Failures</th>
-<th>Duration</th>
-<th>Success rate</th>
+<th>Test</th>
+<th>test(AVD) - 4.1.2</th>
 </tr>
-</thread>
+</thead>
 <tr>
-<td class="success">
-<a href="org.flyve.inventory.agent.AboutTest.html">AboutTest</a>
-</td>
-<td>1</td>
-<td>0</td>
-<td>1.762s</td>
-<td class="success">100%</td>
-</tr>
-<tr>
-<td class="success">
-<a href="org.flyve.inventory.agent.InventoryTaskTest.html">InventoryTaskTest</a>
-</td>
-<td>3</td>
-<td>0</td>
-<td>1.888s</td>
-<td class="success">100%</td>
-</tr>
-<tr>
-<td class="success">
-<a href="org.flyve.inventory.agent.SplashTest.html">SplashTest</a>
-</td>
-<td>1</td>
-<td>0</td>
-<td>0.931s</td>
-<td class="success">100%</td>
+<td>testTakeScreenshot</td>
+<td class="success">passed (1.762s)</td>
 </tr>
 </table>
 </div>
