--- a/reports/debug/org.flyve.inventory.agent/InventoryAgentApp.java.html
+++ b/reports/debug/org.flyve.inventory.agent/InventoryAgentApp.java.html
@@ -38,9 +38,9 @@ import android.telephony.TelephonyManager;
 import android.text.format.DateFormat;
 import android.util.Log;
 
-import com.bugsnag.android.Bugsnag;
-
 import org.flyve.inventory.agent.utils.FlyveLog;
+import org.flyve.inventory.agent.utils.LocalStorage;
+import org.flyve.inventory.agent.utils.UtilsCrash;
 
 <span class="fc" id="L42">public class InventoryAgentApp extends Application implements OnSharedPreferenceChangeListener {</span>
 
@@ -58,9 +58,9 @@ import org.flyve.inventory.agent.utils.FlyveLog;
     @Override
     public void onCreate() {
 <span class="fc" id="L57">        super.onCreate();</span>
-
-<span class="fc" id="L59">        Bugsnag.init(this);</span>
-<span class="fc" id="L60">        Bugsnag.setEndpoint(&quot;https://hooks.thestralbot.com/-1001061475099/&quot;);</span>
+<span class="fc" id="L58">        LocalStorage localStorage = new LocalStorage(this);</span>
+<span class="fc" id="L59">        Boolean val = Boolean.getBoolean( localStorage.getData(&quot;crashReport&quot;) );</span>
+<span class="fc" id="L60">        UtilsCrash.configCrash(this, val);</span>
 
 <span class="fc" id="L62">        prefs = PreferenceManager.getDefaultSharedPreferences(this);</span>
 <span class="fc" id="L63">        prefs.registerOnSharedPreferenceChangeListener(this);</span>
